# twidge

./: .env  .eslintignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.yml  .gitignore  .prettierignore  .prettierrc  .prettierrc.js  .prettierrc.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  README.md  commitlint.config.js  fleet.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  rust-toolchain  sqlite.session.sql  tailwind.config.js  tsconfig.json  turbo.json  types.ts
.cargo/: config.toml
.fleet/: run.json
.github/: clippy.yml
.github/actions/publish-artifacts/: action.yml
.github/workflows/: ci.yml  ci.yml.disabled  clippy.yml  commit-message-lint.yml  lint-ts.yml  lint.yml
.husky/: pre-commit
.storybook/: main.js  preview.js
apps/desktop/: index.html  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.tsx  bindings.ts  globals.css  index.css  main.tsx  nunito.css  query.ts  routes.tsx  rspc.query.ts  satoshi.css  styles.css
apps/desktop/src/components/: login.tsx
apps/desktop/src/hooks/: useClickOutside.tsx  useCustomQuery.ts  usePlatform.ts
apps/desktop/src/layouts/: base_layout.tsx
apps/desktop/src/pages/: home.tsx  index.tsx  loading.tsx  login.tsx
apps/desktop/src/routes/: __layout.tsx  index.tsx
apps/landing/: .env  astro.config.mjs  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.cjs  tailwind.config.js
apps/landing/components/: catalyst.tsx  footer.tsx  hero.tsx  navbar.tsx  preview.tsx  waitlist.tsx
apps/landing/components/blooms/: index.tsx
apps/landing/components/features/: card.tsx  index.tsx
apps/landing/components/more/: cards.tsx  index.tsx
apps/landing/pages/: _app.tsx  index.tsx
apps/landing/pages/oauth/: callback.tsx
apps/landing/src/components/: Footer.astro  Navbar.astro
apps/landing/src/layouts/: Layout.astro
apps/landing/src/pages/: index.astro
apps/landing/src/styles/: index.css
apps/landing/styles/: globals.css
apps/src-tauri/: Cargo.toml  bindings.ts  package.json  tauri.conf.json
apps/src-tauri/icons/: icon.icns
apps/src-tauri/src/: main.rs  settings.rs
apps/src-tauri/src/daemon/: mod.rs
apps/src-tauri/src/daemon/routes/: mod.rs
apps/web/: .env.example  .eslintrc.js  .gitignore  index.html  next.config.js  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: favicon.tsx  sidebar.tsx  trpc.tsx
apps/web/components/cursors/: icon.tsx  index.tsx  me.tsx  others.tsx
apps/web/components/settings/: sidebar.tsx
apps/web/components/spaces/: space-sidebar.tsx
apps/web/hoc/settings/: user.tsx
apps/web/hoc/spaces/: SpacePage.tsx  WhiteboardPage.tsx
apps/web/hooks/: useClipSense.ts  useCurrentSpace.ts  useCurrentWhiteboard.ts  usePresenceJS.ts  useUser.ts
apps/web/layouts/: private.tsx  root.tsx  space.tsx  spaces.tsx
apps/web/pages/: _app.tsx  index.tsx
apps/web/pages/api/: hello.ts
apps/web/pages/auth/: login.tsx
apps/web/pages/settings/: index.tsx
apps/web/pages/spaces/: [id].tsx
apps/web/pages/trpc/: [trpc].ts
apps/web/prisma/: schema.prisma
apps/web/server/: backblaze.tsx  context.ts  index.ts  server.ts
apps/web/server/routes/: healthcheck.ts  index.ts  spaces.ts  storage.ts  user.ts  whiteboard.ts
apps/web/src/: App.tsx  index.css  main.tsx  whiteboard.css
apps/web/src/components/: ctx-menu.tsx  logo.tsx
apps/web/src/layout/: onboarding_layout.tsx
apps/web/src/layouts/: index.tsx  onboarding_layout.tsx
apps/web/styles/: globals.css
apps/web/utils/: prisma.ts  trpc.ts
core/: Cargo.toml  package.json  query.ts  router.ts
core/prisma/: Cargo.toml
core/prisma/src/: main.rs
core/src/: errors.rs  functions.rs  lib.rs  prisma.rs  utils.rs
core/src/db/: migrator.rs  mod.rs  settings.rs
core/src/routes/: db.rs  mod.rs  notes.rs  settings.rs  spaces.rs
core/src/routes/whiteboard/: items.rs  mod.rs
core/state/: index.ts
core/state/global/: index.ts
core/state/router/: index.ts
core/state/space/: index.ts  notes.ts
prisma/: Cargo.toml  dev.db  dev.db-journal  file.db  file.db-journal  schema.prisma  sqlite.db  sqlite.db-journal
prisma/migrations/20220806152151_init/: migration.sql
prisma/migrations/20220806170917_init/: migration.sql
prisma/migrations/20220812123147_init/: migration.sql
prisma/migrations/20220812133938_create_field_index_spaces/: migration.sql
prisma/migrations/20220812135539_init/: migration.sql
prisma/migrations/20220813100256_create_elements/: migration.sql
prisma/migrations/20220813100454_create_elements/: migration.sql
prisma/migrations/20220813102946_init/: migration.sql
prisma/migrations/20220815083043_init/: migration.sql
prisma/migrations/20220815090230_rename_spaces_id_space_id/: migration.sql
prisma/migrations/20220818124118_init_settings/: migration.sql
prisma/migrations/20220825115025_add_width_height_element/: migration.sql
prisma/migrations/20220909125735_init/: migration.sql
prisma/migrations/20220912103940_add_settings/: migration.sql
prisma/migrations/20220912104240_make_name_unique/: migration.sql
prisma/migrations/20220917071351_init/: migration.sql
prisma/migrations/20220919105458_init/: migration.sql
prisma/migrations/20220924105617_init/: migration.sql
prisma/migrations/20220924153001_init/: migration.sql
prisma/migrations/20220924164006_add_required_fields_for_whiteboarditems/: migration.sql
prisma/migrations/20220924170456_init/: migration.sql
prisma/migrations/20221005103028_remove_journals_table/: migration.sql
prisma/migrations/20221015160619_init_spaces/: migration.sql
prisma/migrations/20221020152553_add_settings/: migration.sql
prisma/migrations/20221020154405_make_key_unique/: migration.sql
prisma/migrations/20221026065303_add_fields_to_space/: migration.sql
prisma/migrations/20221026070027_add_dates_to_spaces/: migration.sql
prisma/migrations/20221210170356_init/: migration.sql
prisma/src/: lib.rs
scripts/: run_pscale.cmd
(+123 files in other folders)
