[workspace]
resolver = "2"
members = [
    "apps/src-tauri",
    "core",
    "core/prisma"
]

[workspace.dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust.git", rev = "078919e3724f35cc00c2402c66ba585b61c88d47", features = [
  "rspc",
  "sqlite-create-many",
  "migrations",
  "sqlite",
], default-features = false }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust.git", rev = "078919e3724f35cc00c2402c66ba585b61c88d47", features = [
  "rspc",
  "sqlite-create-many",
  "migrations",
  "sqlite",
], default-features = false }
rspc = { version = "0.1.2" }