[workspace]
resolver="2"
members = [
    "apps/src-tauri",
    "packages/core",
    "prisma"
]

[workspace.dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust.git", tag="0.6.2", features = [
  "rspc",
  "sqlite-create-many",
  "migrations",
  "sqlite",
], default-features = false }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust.git", tag="0.6.2", features = [
  "rspc",
  "sqlite-create-many",
  "migrations",
  "sqlite",
], default-features = false }
rspc = { version = "0.1.2" }
