[package]
name = "tcore"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
platform-dirs = "0.3.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust.git", rev = "6a0119bce951c8d956542a59b2f783fc5a591fc7", features = [
  "rspc",
  "sqlite-create-many",
] }
tauri = { version = "1.0.5", features = ["api-all"] }
rspc = { version = "0.0.4", features = [
  "uuid",
  "tauri",
  "chrono",
  "tracing",
] }
thiserror = "1.0.32"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
