[package]
name = "tcore"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
platform-dirs = "0.3.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.0", features = [
  "rspc", 
  "sqlite-create-many",
] }
tauri = { version = "1.0.5", features = ["api-all"] }
rspc = { version = "0.0.4", features = [
  "uuid",
  "tauri",
  "chrono",
  "tracing",
] }
thiserror = "1.0.32"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
migration-core = { git = "https://github.com/Brendonovich/prisma-engines.git" }
quaint = { git = "https://github.com/prisma/quaint.git", features = ["sqlite", "uuid"] }
enumflags2 = "0.7.5"
sql-migration-connector = { git = "https://github.com/Brendonovich/prisma-engines.git" }


include_dir = "0.7.2"
lazy_static = "1.4.0"
futures = "0.3.24"
