[package]
name = "tcore"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
platform-dirs = "0.3.0"
prisma-client-rust = { workspace = true, default-features = false, features = [
    "sqlite",
    "rspc",
    "sqlite-create-many",
    "migrations"
] }
tauri = { version = "1.0.5", features = ["api-all"] }
open = "3.0.3"
rspc = { workspace = true, features = [
    "uuid",
    "tauri",
    "chrono",
    "tracing",
] }
thiserror = "1.0.32"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
rand = "0.7.2"
lazy_static = "1.4.0"
futures = "0.3.24"
dataurl = "0.1.2"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
