[package]
name = "prisma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust.git", rev = "078919e3724f35cc00c2402c66ba585b61c88d47", features = [
  "rspc",
  "sqlite-create-many",
  "migrations",
  "sqlite",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21.2", features = ["full"] }
prisma-client-rust = { workspace = true, default-features = false, features = [
    "sqlite",
    "rspc",
    "sqlite-create-many",
    "migrations"
] }
