[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Varun Potti <potti.varun07@gmail.com>"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all", "system-tray"] }
tcore = {path="../../packages/core"}
tokio = { version = "1.20.1", features = ["full"] }
rspc = { version = "0.0.4", features = ["tauri"] }
pretty_env_logger = "0.4.0"
futures = "0.3.23"
lazy_static = "1.4.0"
log = "0.4.17"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[dependencies.tauri-plugin-autostart]
git = "https://github.com/tauri-apps/tauri-plugin-autostart"
