[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
axum = { version="0.5.17" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }
tcore= { path="../../packages/core" }
window-shadows='0.2.0'
rspc = { workspace = true, features = [
    "uuid",
    "tauri",
    "chrono",
    "tracing",
] }
tower-http = { version = "0.3.0", features = ["cors"] }
http="0.2.8"
prisma= {path="../../prisma"}
tokio = { version = "1.21.2", features = ["full"] }
pretty_env_logger = "0.4.0"
log = "0.4.17"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
