[package]
name = "prisma"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust-cli = {git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.0" , features = [
  "rspc",
  "sqlite-create-many",
] }
